## MODULE.bazel

module(
    name = "gbbs",
    version = "0.0.1",
    compatibility_level = 1,
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

bazel_dep(name = "googletest", version = "1.11.0", repo_name = "googletest")
bazel_dep(name = "abseil-cpp", version = "20240116.2")
bazel_dep(name = "google_benchmark", version = "1.9.4")

git_repository(
  name = "parlaylib",
  remote = "https://github.com/ParAlg/parlaylib.git",
  commit = "352f5367a6b3bd2f0c6f05882cdd02e978e349ea",
  strip_prefix = "include/",
)
